--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<div class="container">
 			<header class="header">			
 				<div class="header__logo">
-					<a href="https://www.apple.com/" target="_blank"><img src="img/apple.svg" alt="logo"></a>
+					<a href="https://www.apple.com/" target="_blank"><img src="apple.svg" alt="logo"></a>
 				</div>
 				<input id="menuCheckbox" type="checkbox">
 				<ul class="header__links">
@@ -39,11 +39,11 @@
 				<p>Instead of spending time searching for the right app, our AI will bring the right app to you.</p>
 				<a href="" class="main__btn">Learn</a>
 				<div class="main__icons">
-					<img src="img/circle-icon.svg" alt="circle">
-					<img src="img/circle-icon.svg" alt="circle">
-					<img src="img/semicircle-icon.svg" alt="circle">
-					<img src="img/circle-icon.svg" alt="circle">
-					<img src="img/circle-icon.svg" alt="circle">
+					<img src="circle-icon.svg" alt="circle">
+					<img src="circle-icon.svg" alt="circle">
+					<img src="semicircle-icon.svg" alt="circle">
+					<img src="circle-icon.svg" alt="circle">
+					<img src="circle-icon.svg" alt="circle">
 				</div>
 			</main>
 		</div>
